cmake_minimum_required(VERSION 3.0.2)
project(gis_road_filter)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  sensor_msgs
  pcl_conversions
  pcl_ros
)

find_package(PCL REQUIRED)

catkin_package(
  CATKIN_DEPENDS roscpp sensor_msgs pcl_conversions pcl_ros
  DEPENDS PCL
)

include_directories(
  ${catkin_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
)

add_executable(gis_road_filter src/road_filter.cpp)
target_link_libraries(gis_road_filter
  ${catkin_LIBRARIES}
  ${PCL_LIBRARIES}
)
